<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/root_view"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/popup_full_bright_emui">

    <TextView android:id="@+id/dialog_title"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:textSize="18sp"
              android:textColor="@color/blue"
              android:text="@string/dialog_title"
              android:visibility="gone"
              android:layout_margin="10dp"/>

    <View android:id="@+id/title_line"
          android:layout_below="@id/dialog_title"
          android:layout_width="fill_parent"
          android:layout_height="2dp"
          android:visibility="gone"
          android:background="@color/blue"/>

    <TextView android:id="@+id/dialog_message"
              android:layout_below="@id/title_line"
              android:layout_height="wrap_content"
              android:layout_width="fill_parent"
              android:textSize="14sp"
              android:textColor="@color/black"
              android:layout_margin="10dp"
              android:visibility="gone"
              android:text="@string/dialog_message"/>

    <Button android:id="@+id/positive_Button"
            android:layout_below="@id/dialog_message"
            android:layout_alignLeft="@id/dialog_message"
            android:layout_height="wrap_content"
            android:layout_width="100dp"
            android:text="@string/dialog_prositiveButton"
            android:visibility="gone"
            android:textColor="@color/black"
            android:background="@drawable/dialog_button_bg"/>

    <Button android:id="@+id/negative_Button"
            android:layout_below="@id/dialog_message"
            android:layout_alignRight="@id/dialog_message"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/dialog_negativeButton"
            android:visibility="gone"
            android:textColor="@color/black"
            android:background="@drawable/dialog_button_bg"/>

    <ImageView android:id="@+id/loading_imageview"
               android:layout_centerInParent="true"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:visibility="gone"/>

    <TextView android:id="@+id/loading_desc"
              android:layout_below="@id/loading_imageview"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="15dp"
              android:layout_centerHorizontal="true"
              android:visibility="gone"
              android:text="@string/dialog_loading"/>

</RelativeLayout>